--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.30",
     "tailwindcss": "^3.4.0",
-    "vite": "^5.1.0"
+    "vite": "^4.x" 
   }
 }
 
